[project]
name = "ctk"
version = "0.1.0"
description = "Content toolkit — download, transcribe, and archive social media content."
requires-python = ">=3.11"
dependencies = [
    "yt-dlp",
    "faster-whisper",
    "Scweet",
]

[project.scripts]
ctk = "ctk.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ctk"]
